# offlinemsmtp

./: .envrc  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: build.yaml
offlinemsmtp/: __init__.py  daemon.py  util.py
