[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
]

[project]
name = "offlinemsmtp"
description = "msmtp wrapper allowing for offline use"
readme = "README.md"
keywords = [
  "email",
  "msmtp",
  "offline",
]
license = { file = "LICENSE" }
authors = [
    { name = "Sumner Evans", email = "inquiries@sumnerevans.com" },
]
requires-python = ">=3.8,<4"
classifiers = [
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha", # Indicate who your project is intended for
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Communications :: Email :: Mail Transport Agents",
]
dynamic = [
  "version",
]
dependencies = [
  "inotify",
  "PyGObject",
]

[dependency-groups]
dev = [
  "black",
  "flake8",
  "flake8-annotations",
  "flake8-bugbear",
  "flake8-comprehensions",
  "flake8-pep3101",
  "flake8-print",
  "isort",
  "mypy",
  "pre-commit",
  "requirements-parser",
  "termcolor",
]

[project.urls]
"Bug Tracker" = "https://github.com/bbbart/offlinemsmtp/issues"
Homepage = "https://github.com/bbbart/offlinemsmtp"

[project.scripts]
offlinemsmtp = "offlinemsmtp.__main__:main"

[tool.hatch.version]
path = "offlinemsmtp/__init__.py"

[tool.black]
line-length = 99
target-version = ["py38"]

[tool.isort]
profile = "black"
combine_as_imports = true
known_first_party = "offlinemsmtp"
line_length = 99
